# Auto_Healer

./: .env.example  .gitignore  README.md  buggy_app.py  buggy_app_silent.py  log_monitor.py  main.py  pyproject.toml  sentinel_old.py.bak  setup.sh  start.sh  stop.sh  test_multi_file_remediation.py
.github/workflows/: sentinel-ci.yml
buggy_multi_app/: __init__.py  calculator.py  config.py  main.py
docker/: Dockerfile.app  Dockerfile.monitor  Dockerfile.sandbox  docker-compose.yml
sentinel/: __init__.py  agent.py  api.py  config.py  dashboard.html  github_pr.py  models.py  run_worker.py  sandbox.py  worker.py
