[project]
name = "auto-healer"
version = "1.0.0"
description = "Sentinel — Event-Driven Auto-Remediation Pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "redis[hiredis]>=5.0",
    "docker>=7.0",
    "PyGithub>=2.3",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sentinel"]
